# skani

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  model_to_src.sh
.github/workflows/: build  release.yml
scripts/: clustermap_triangle.py  pre_release.sh
src/: avx2_seeding.rs  chain.rs  cli.rs  cmd_line.rs  constants.rs  dist.rs  error.rs  file_io.rs  lib.rs  main.rs  model.rs  nthash.rs  params.rs  parse.rs  regression.rs  screen.rs  search.rs  seeding.rs  sketch.rs  sketch_db.rs  triangle.rs  types.rs
test_files/: all_ns.fa  e.coli-o157.fasta.sketch  empty_fasta.fa  list.txt  o157_plasmid.fasta  query_list.txt  skani_matrix.af  test.fasta  viruses.fna
test_results_versions/: 0.2.1  0.2.2  0.3.0  v0.2.1
tests/: int_test_new.rs  integration_test.rs  tests.rs
tests/results/: output  output_o_triangle_full  output_o_triangle_full.af  test_dist_file.txt
tests/results/test_sketch_dir/: e.coli-W.fasta.sketch  e.coli-o157.fasta.sketch  o157_reads.fastq.sketch
tests/results/test_sketch_dir1/: e.coli-EC590.fasta.sketch  e.coli-K12.fasta.sketch  e.coli-W.fasta.gz.sketch  o157_reads.fastq.sketch
tests/results/test_sketch_dir3/: e.coli-EC590.fasta.sketch  e.coli-K12.fasta.sketch  e.coli-W.fasta.gz.sketch  e.coli-h5.fasta.sketch  o157_plasmid.fasta.sketch
tests/results/test_sketch_dir_aai/: o157_plasmid.fasta.sketch
