[package]
name = "skani"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "skani is a fast tool for calculating ANI between metagenomic sequences, such as metagenome-assembled genomes (MAGs). It is extremely fast and is robust against incompleteness and fragmentation, giving accurate ANI estimates."
homepage = "https://github.com/bluenote-1577/skani"
documentation = "https://github.com/bluenote-1577/skani"
repository = "https://github.com/bluenote-1577/skani"
readme = "README.md"

exclude = [
    "test_files/*",
    "videos/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
bio = "*"
rand = "0.8.3"
fxhash = "*"
clap = "3"
partitions = "*"
num-traits = "*"
needletail = "*"
simple-logging= "*"
log = "*"
rayon = "*"
smallvec = { version = "*", features = ["union","serde","write"] }
serde = "*"
bincode = "*"
intervallum = "*"
rust-lapper = "*"
gcollections = "*"
fastrand="*"
gbdt = "*"
serde_json = "*"
statrs = "*"

[target.'cfg(target_env = "x86_64")'.dependencies]
tikv-jemallocator = "*"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1"
serial_test = "*"



[profile.release]
panic = "abort"

[profile.dev]
#opt-level = 1
opt-level = 3

#[rust]
#debuginfo-level = 1
