[package]
name = "skani"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
bio = "*"
rand = "0.8.3"
fxhash = "*"
partitions = "*"
num-traits = "*"
needletail = "*"
simple-logging= "*"
log = "*"
rayon = "*"
smallvec = { version = "*", features = ["union","serde","write"] }
serde = "*"
bincode = "*"
intervallum = "*"
rust-lapper = "*"
gcollections = "*"
fastrand="*"
gbdt = "*"
serde_json = "*"
statrs = "*"

[dependencies.clap]
version = "3"
optional = true

[target.'cfg(target_env = "x86_64")'.dependencies]
tikv-jemallocator = "*"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1"
serial_test = "*"

[features]
cli = ["clap"]

[[bin]]
name = "skani"
path = "src/main.rs"
required-features = ["cli"]


[profile.release]
panic = "abort"

[profile.dev]
#opt-level = 1
opt-level = 3

#[rust]
#debuginfo-level = 1
